adding configurations for Neo4j, suitable for croatia.osm